Fixed the 'overflowing active menu' on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -215,7 +215,6 @@ body.menu-aberto .header.scroll {
 
 body.menu-aberto .header {
   position: relative;
-  height: 100vh;
   display: block;
   background-color: var(--brand-color);
 }
@@ -230,6 +229,7 @@ body.menu-aberto .menu {
   left: 0;
   display: block;
   width: 100%;
+  height: 100vh;
   margin-top: var(--altura-nav);
   padding-block: 6rem;
   background-color: var(--brand-color);
@@ -574,6 +574,13 @@ body.menu-aberto .navbar-container {
 }
 
 /* Responsivo */
+
+@media only screen and (max-height: 550px) {
+  /* Esse '@media' é apenas um ajuste para que não ocorra transbordamento do menu quando o mesmo estiver aberto nessa resolução ou menor */
+  body.menu-aberto .menu {
+    height: initial;
+  }
+}
 
 @media only screen and (max-width: 379px) {
   /* Esse '@media' é apenas um ajuste para que o SVG do botão não diminua de tamanho e fique mais       apresentável em dispositivos de menor resolução. */
